--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "tailwindcss": "^3.3.6",
-    "vite": "^5.0.5"
+    "vite": "^5.0.5",
+    "vite-plugin-mkcert": "^1.17.1"
   }
 }
